# obs-multi-scene-record

./: .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  README.md  buildspec.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
data/locale/: en-US.ini
specs/001-fix-hotkey-registration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-dock-hotkey-sync/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-perf-parity-audit/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-general-perf-pass/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-general-perf-stability-audit/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-cqp-mismatch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-fix-replay-collision/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-fix-replay-quality-truncation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-remove-dead-mixer-call/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-idle-slot-resource-audit/: plan.md  quickstart.md  research.md  (+2 more)
src/: manager.cpp  manager.hpp  plugin-main.cpp  plugin-main.hpp  plugin-support.c.in  plugin-support.h  slot.cpp  slot.hpp  ui-dock.cpp  ui-dock.hpp  ui-slot-editor.cpp  ui-slot-editor.hpp
(+28 files in other folders)
